--- a/AI/物体识别/index.html
+++ b/AI/物体识别/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <script src="https://unpkg.com/@tensorflow/tfjs"></script>
-    <script src="https://unpkg.com/@tensorflow-models/mobilenet"> </script>
+    <script src="./tf.min.js"></script>
+    <script src="./mobilenet.min.js"> </script>
 </head>
 
 <video width=400 height=300></video>
@@ -27,6 +27,7 @@
       status.innerText = 'Model is loaded!';
 
       const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+    
       video.srcObject = stream;
       await video.play();
     
