feat: deepClone解决循环引用问题

--- a/test/index.html
+++ b/test/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<style>
-  div {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-  }
-</style>
-<body>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      input[type="checkbox"] {
+        display: none;
+      }
+
+      .checkbox {
+        width: 20px;
+        height: 20px;
+        border: 1px solid #000;
+        padding: 2px;
+      }
+
+      input[type='checkbox']:checked + .checkbox {
+        background-color: yellow;
+      }
+    </style>
+  </head>
+  <body>
+    <label>
+      <input type="checkbox" id="checkbox" />
+      <div class="checkbox"></div>
+    </label>
+  </body>
 </html>
 <script>
-console.log(document.documentElement.getBoundingClientRect().bottom);
-const clientHeight = document.documentElement.clientHeight || document.body.clientHeight;
-console.log('clientHeight: ', clientHeight);
-
-window.addEventListener('scroll', () => {
-  console.log(document.documentElement.getBoundingClientRect().bottom);
-  const clientHeight = document.documentElement.clientHeight || document.body.clientHeight;
-  console.log('clientHeight: ', clientHeight);
-});
+  checkbox.addEventListener('change', (e) => {
+    console.log(e.target.checked);
+  });
 </script>
