--- a/test/index.html
+++ b/test/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      input[type="checkbox"] {
-        display: none;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<style>
+  
+  .wrapper {
+    display: flex;
+    width: 400px;
+  }
 
-      .checkbox {
-        width: 20px;
-        height: 20px;
-        border: 1px solid #000;
-        padding: 2px;
-      }
+  .wrapper div {
+    flex: 1;
+    border: 1px solid #000;
+  }
 
-      input[type='checkbox']:checked + .checkbox {
-        background-color: yellow;
-      }
-    </style>
-  </head>
-  <body>
-    <label>
-      <input type="checkbox" id="checkbox" />
-      <div class="checkbox"></div>
-    </label>
-  </body>
+  @media (max-width: 500px) {
+    .wrapper {
+      display: block;
+    }
+  }
+</style>
+<body>
+  <div class="wrapper">
+    <div>column 1column 1column 1column 1</div>
+    <div>column 2column 2column 2column 2column 2column 2column 2column 2</div>
+    <div>column 3column 3column 3column 3column 3column 3column 3column 3column 3column 3column 3column 3column 3</div>
+    <div>column 4</div>
+  </div>
+</body>
 </html>
-<script>
-  checkbox.addEventListener('change', (e) => {
-    console.log(e.target.checked);
-  });
-</script>
