--- a/webpackDemo/src/index.html
+++ b/webpackDemo/src/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="img1"></div>
-    <div class="img2"></div>
-    <img src="./images/background.png" alt="" />
-    <script src="https://cdn.bootcss.com/lodash.js/4.17.15/lodash.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Webpack Demo</title>
+</head>
+<body>
+  <img src="./images/test.png">
+</body>
 </html>
