--- a/CSS_DEMO/nth-child vs nth-of-type/index.html
+++ b/CSS_DEMO/nth-child vs nth-of-type/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    p:first-of-type {
+      color: red
+    }
+  </style>
 </head>
 <body>
-  <button id="btn">click</button>
+  <span>00</span>
+  <p>111</p>
+  <p>222</p>
 </body>
 </html>
-<script src="./test.js"></script>
