--- a/test/index.html
+++ b/test/index.html
@@ -3,11 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <script>
-      window.redirectUrl = "https://sxzy.yunzhi.co/pointmall/jump.html";
-      window.location.replace(window.redirectUrl);
-    </script>
+    <title>Document</title>
+    <style>
+      div {
+        border-radius: 10px;
+        background-image: -moz-linear-gradient(
+          90deg,
+          rgb(255, 222, 183) 0%,
+          rgb(255, 188, 128) 34%,
+          rgb(253, 221, 181) 100%
+        );
+        background-image: -webkit-linear-gradient(
+          90deg,
+          rgb(255, 222, 183) 0%,
+          rgb(255, 188, 128) 34%,
+          rgb(253, 221, 181) 100%
+        );
+        background-image: -ms-linear-gradient(
+          90deg,
+          rgb(255, 222, 183) 0%,
+          rgb(255, 188, 128) 34%,
+          rgb(253, 221, 181) 100%
+        );
+
+        width: 639px;
+        height: 84px;
+        z-index: 65;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div></div>
+  </body>
 </html>
