--- a/My/MyVue copy/index.html
+++ b/My/MyVue copy/index.html
@@ -3,30 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
+    <script src="./index.js"></script>
     <script>
-      const TYPE_TEXT_NODE = Node.TEXT_NODE;
-      class Reactive extends EventTarget {
+      class Reactive {
         constructor(options) {
-          super();
           this.options = options;
-          this.$data = this.options.data;
+          // 使data内的数据变为响应式
+          this.$data = observe(this.options.data);
           this.el = document.querySelector(this.options.el);
           this.compile(this.el);
-          // 调用双向绑定
-          this.observe(this.$data);
-        }
-        observe(data) {
-          let _this = this;
-          // 代理data的set操作，当数据赋值时触发页面数据更新
-          this.$data = new Proxy(data, {
-            set(target, key, value, receiver) {
-              let event = new CustomEvent(key, {
-                detail: value,
-              });
-              _this.dispatchEvent(event);
-              return Reflect.set(target, key, value, receiver);
-            },
-          });
+          // observe(this.$data);
+
+          this.mounted = this.options.mounted;
+          this.mounted.call(this);
         }
 
         compile(el) {
@@ -35,22 +24,26 @@
           // 遍历子节点
           [...child].forEach((node) => {
             // 如果是文本节点
-            if (node.nodeType === TYPE_TEXT_NODE) {
+            if (node.nodeType === Node.TEXT_NODE) {
               let text = node.textContent;
               let reg = /{{\s*([^\s{}]+)\s*}}/;
               // 如果文本内容符合 {{xxx}} 的形式
               if (reg.test(text)) {
                 let $1 = RegExp.$1;
+                console.log("this.$data[$1]: ", JSON.stringify(this.$data[$1]));
                 // 如果data中有xxx，则用data中的数据替换xxx
                 this.$data[$1] &&
                   (node.textContent = text.replace(reg, this.$data[$1]));
 
                 // 监听xxx，如果xxx发生更改，修改dom的内容
-                this.addEventListener($1, (e) => {
-                  node.textContent = text.replace(reg, e.detail);
+                // this.addEventListener($1, (e) => {
+                //   node.textContent = text.replace(reg, e.detail);
+                // });
+                watch(() => {
+                  node.textContent = text.replace(reg, this.$data[$1]);
                 });
               }
-            } else if (node.nodeType === 1) {
+            } else if (node.nodeType === Node.ELEMENT_NODE) {
               // 如果是普通元素节点
               let attr = node.attributes;
 
@@ -78,6 +71,7 @@
       {{name}}
       <h2>{{age}}</h2>
       <input type="text" v-model="name" />
+      {{arr}}
     </div>
     <script>
       let vm = new Reactive({
@@ -86,6 +80,12 @@
         data: {
           name: "枫",
           age: 23,
+          arr: [1, 2, 3],
+        },
+        mounted() {
+          setTimeout(() => {
+            this.$data.arr.push(4);
+          }, 1000);
         },
       });
     </script>
