--- a/test/index.html
+++ b/test/index.html
@@ -4,35 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      div {
-        border-radius: 10px;
-        background-image: -moz-linear-gradient(
-          90deg,
-          rgb(255, 222, 183) 0%,
-          rgb(255, 188, 128) 34%,
-          rgb(253, 221, 181) 100%
-        );
-        background-image: -webkit-linear-gradient(
-          90deg,
-          rgb(255, 222, 183) 0%,
-          rgb(255, 188, 128) 34%,
-          rgb(253, 221, 181) 100%
-        );
-        background-image: -ms-linear-gradient(
-          90deg,
-          rgb(255, 222, 183) 0%,
-          rgb(255, 188, 128) 34%,
-          rgb(253, 221, 181) 100%
-        );
-
-        width: 639px;
-        height: 84px;
-        z-index: 65;
-      }
-    </style>
   </head>
-  <body>
-    <div></div>
-  </body>
+  <body></body>
 </html>
+<script>
+  let pattern = /\/projectx\/[^\/]*\/([^\/]*).html/g;
+  let link =
+    "activity.m.duibadev.com.cn/projectx/p6756a85d/f0a020f29.html?appKey=jlg88lyxz7siqtmr&openBs=openbs";
+  console.log(
+    link.replace(pattern, (match, p1) => {
+      return match.replace(p1, "index");
+    })
+  );
+</script>
