--- a/My/MyVue/index.html
+++ b/My/MyVue/index.html
@@ -3,68 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
-    <script src="./index.js"></script>
-    <script>
-      class Reactive {
-        constructor(options) {
-          this.options = options;
-          // 使data内的数据变为响应式
-          this.$data = observe(this.options.data);
-          this.el = document.querySelector(this.options.el);
-          this.compile(this.el);
-          // observe(this.$data);
-
-          this.mounted = this.options.mounted;
-          this.mounted.call(this);
-        }
-
-        compile(el) {
-          // 取出子节点
-          let child = el.childNodes;
-          // 遍历子节点
-          [...child].forEach((node) => {
-            // 如果是文本节点
-            if (node.nodeType === Node.TEXT_NODE) {
-              let text = node.textContent;
-              let reg = /{{\s*([^\s{}]+)\s*}}/;
-              // 如果文本内容符合 {{xxx}} 的形式
-              if (reg.test(text)) {
-                let $1 = RegExp.$1;
-                console.log("this.$data[$1]: ", JSON.stringify(this.$data[$1]));
-                // 如果data中有xxx，则用data中的数据替换xxx
-                this.$data[$1] &&
-                  (node.textContent = text.replace(reg, this.$data[$1]));
-
-                // 监听xxx，如果xxx发生更改，修改dom的内容
-                // this.addEventListener($1, (e) => {
-                //   node.textContent = text.replace(reg, e.detail);
-                // });
-                watch(() => {
-                  node.textContent = text.replace(reg, this.$data[$1]);
-                });
-              }
-            } else if (node.nodeType === Node.ELEMENT_NODE) {
-              // 如果是普通元素节点
-              let attr = node.attributes;
-
-              // 如果属性中存在v-model
-              if (attr.hasOwnProperty("v-model")) {
-                // 得到v-model属性节点的值
-                let keyName = attr["v-model"].nodeValue;
-                // 将元素节点的值修改
-                node.value = this.$data[keyName];
-                // 监听元素节点的input事件，input后修改data中的数据
-                node.addEventListener("input", (e) => {
-                  this.$data[keyName] = node.value;
-                });
-              }
-            }
-            // 递归对子节点处理
-            this.compile(node);
-          });
-        }
-      }
-    </script>
   </head>
   <body>
     <div id="app">
@@ -73,21 +11,128 @@
       <input type="text" v-model="name" />
       {{arr}}
     </div>
-    <script>
-      let vm = new Reactive({
-        // 挂载元素
-        el: "#app",
-        data: {
-          name: "枫",
-          age: 23,
-          arr: [1, 2, 3],
-        },
-        mounted() {
-          setTimeout(() => {
-            this.$data.arr.push(4);
-          }, 1000);
-        },
-      });
-    </script>
   </body>
 </html>
+<script>
+  let target = null;
+  class Dep {
+    constructor() {
+      // 存计算方法的地方，可以理解为副作用函数列表
+      this.subs = [];
+    }
+
+    // 添加依赖
+    depend() {
+      if (target && !this.subs.includes(target)) {
+        this.subs.push(target);
+      }
+    }
+    // 之后在数据修改后调用
+    notify() {
+      this.subs.forEach((sub) => sub());
+    }
+  }
+
+  function watch(func) {
+    target = func;
+    // 先执行一遍计算方法获得total
+    target();
+    // 将target设置为null，供其它响应式数据使用
+    target = null;
+  }
+
+  // 使data变为响应式
+  function observe(data) {
+    if (typeof data !== "object" || data === null) {
+      return data;
+    }
+
+    // 将data中的子对象也变为响应式
+    let val;
+    Object.keys(data).forEach((key) => {
+      val = data[key];
+      data[key] = observe(val);
+    });
+    const dep = new Dep();
+    return new Proxy(data, {
+      get(target, key, receiver) {
+        dep.depend(); // 依赖注入
+        return Reflect.get(target, key, receiver);
+      },
+      set(target, key, val, receiver) {
+        Reflect.set(target, key, val, receiver);
+        dep.notify(); // 执行
+        return true;
+      },
+    });
+  }
+  class Reactive {
+    constructor(options) {
+      this.options = options;
+      // 使data内的数据变为响应式
+      this.$data = observe(this.options.data);
+      this.el = document.querySelector(this.options.el);
+      this.compile(this.el);
+
+      this.$mounted = this.options.mounted;
+      this.$mounted.call(this);
+    }
+
+    compile(el) {
+      // 取出子节点
+      let child = el.childNodes;
+      // 遍历子节点
+      [...child].forEach((node) => {
+        // 如果是文本节点
+        if (node.nodeType === Node.TEXT_NODE) {
+          let text = node.textContent;
+          let reg = /{{\s*([^\s{}]+)\s*}}/;
+          // 如果文本内容符合 {{xxx}} 的形式
+          if (reg.test(text)) {
+            let $1 = RegExp.$1;
+            // 如果data中有xxx，则用data中的数据替换xxx
+            // 监听xxx，如果xxx发生更改，修改dom的内容
+            this.$data[$1] &&
+              watch(() => {
+                node.textContent = text.replace(reg, this.$data[$1]);
+              });
+          }
+        } else if (node.nodeType === Node.ELEMENT_NODE) {
+          // 如果是普通元素节点
+          let attr = node.attributes;
+
+          // 如果属性中存在v-model
+          if (attr.hasOwnProperty("v-model")) {
+            // 得到v-model属性节点的值
+            let keyName = attr["v-model"].nodeValue;
+            // 将元素节点的值修改
+            node.value = this.$data[keyName];
+            // 监听元素节点的input事件，input后修改data中的数据
+            node.addEventListener("input", (e) => {
+              this.$data[keyName] = node.value;
+            });
+          }
+        }
+        // 递归对子节点处理
+        this.compile(node);
+      });
+    }
+  }
+</script>
+<script>
+  let vm = new Reactive({
+    // 挂载元素
+    el: "#app",
+    data: {
+      name: "飞",
+      age: 23,
+      arr: [0, 1, 2],
+    },
+    mounted() {
+      setTimeout(() => {
+        this.$data.arr[3] = 3;
+        console.log("this.$data.arr[3] = 3: ", (this.$data.arr[3] = 3));
+      }, 1000);
+    },
+  });
+</script>
