--- a/test/index.html
+++ b/test/index.html
@@ -4,50 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .main {
-        /* width: 600px; */
-        height: 200px;
-        border: 1px solid #000;
-        overflow: hidden;
-      }
-      .left {
-        float: left;
-        width: 100px;
-        height: 100%;
-        background-color: yellowgreen;
-        margin-left: -100%;
-      }
-      .right {
-        float: left;
-        width: 100px;
-        height: 100%;
-        background-color: yellow;
-        margin-right: -100px;
-        position: relative;
-        left: -100px;
-      }
-      .center {
-        width: 100%;
-        float: left;
-        height: 100%;
-      }
-      .inner {
-        height: 100%;
-        margin-left: 100px;
-        margin-right: 100px;
-        background-color: pink;
-      }
-    </style>
   </head>
+  <link
+    href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    /* -- */
+  </style>
   <body>
-    <div class="main">
-      <div class="center">
-        <div class="inner"></div>
-      </div>
-      <div class="left"></div>
-
-      <div class="right"></div>
-    </div>
+    <div class="w-64 h-64 bg-blue-100"></div>
   </body>
 </html>
