--- a/test/index.html
+++ b/test/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <link
-    href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-    rel="stylesheet"
-  />
   <style>
     /* -- */
   </style>
   <body>
-    <div class="w-64 h-64 bg-blue-100"></div>
+    <label> Click me <input type="text" /> </label>
+    <script>
+      document.querySelector("label").addEventListener("click", function () {
+        console.log(1);
+      });
+      document.querySelector("input").addEventListener("click", function () {
+        console.log(2);
+      });
+    </script>
   </body>
 </html>
