--- a/test/index.html
+++ b/test/index.html
@@ -1,21 +1,63 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
   <style>
-      div{
-          width: 100px;
-          height: 100px;
-          background: #4CAF50;
-          float: left;
-      }
-      section{
-          width: 300px;
-          /* border: 1px solid red;
-          margin: 100px; */
-      }
+    .container {
+    }
+
+    .header {
+      width: 100%;
+      height: 100px;
+      background-color: green;
+    }
+    .footer {
+      width: 100%;
+      height: 100px;
+      background-color: red;
+    }
+    .middle {
+      overflow: hidden;
+      height: 200px;
+      /* 圣杯要点 */
+      padding: 0 100px;
+    }
+    .main,
+    .left,
+    .right {
+      height: 100%;
+      float: left;
+      position: relative;
+    }
+    .main {
+      width: 100%;
+      background-color: pink;
+    }
+    .left {
+      width: 100px;
+      background-color: blue;
+      left: -100px;
+      margin-left: -100%;
+    }
+    .right {
+      width: 100px;
+      background-color: yellow;
+      right: -100px;
+      margin-left: -100px;
+    }
   </style>
-</head>
-<body>
-  <section>
-      <div>我在左边浮动</div>
-      <p>这是一段文字，BFC 即 Block Formatting Contexts (块级格式化上下文),是页面盒模型布局中的一种 CSS 渲染模式，相当于一个独立的容器，里面的元素和外部的元素相互不影响。</p>
-  </section>
-</body>
+  <body>
+    <div class="container">
+      <div class="header"></div>
+      <div class="middle">
+        <div class="main"></div>
+        <div class="left"></div>
+        <div class="right"></div>
+      </div>
+      <div class="footer"></div>
+    </div>
+  </body>
+</html>
