--- a/test/index.html
+++ b/test/index.html
@@ -2,62 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <style>
-    .container {
+    .ellipse {
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
-
-    .header {
-      width: 100%;
-      height: 100px;
-      background-color: green;
-    }
-    .footer {
-      width: 100%;
-      height: 100px;
-      background-color: red;
-    }
-    .middle {
-      overflow: hidden;
-      height: 200px;
-      /* 圣杯要点 */
-      padding: 0 100px;
-    }
-    .main,
-    .left,
-    .right {
-      height: 100%;
-      float: left;
-      position: relative;
-    }
-    .main {
-      width: 100%;
-      background-color: pink;
-    }
-    .left {
-      width: 100px;
-      background-color: blue;
-      left: -100px;
-      margin-left: -100%;
-    }
-    .right {
-      width: 100px;
-      background-color: yellow;
-      right: -100px;
-      margin-left: -100px;
+    .ellipse-multi {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
     }
   </style>
   <body>
-    <div class="container">
-      <div class="header"></div>
-      <div class="middle">
-        <div class="main"></div>
-        <div class="left"></div>
-        <div class="right"></div>
-      </div>
-      <div class="footer"></div>
-    </div>
+    
   </body>
 </html>
+<script>
+let canvas = document.createElement('canvas')
+let val = canvas.toDataURL('image/webp')
+if(val.startsWith('data:image/webp')) {
+  console.log('webp supported')
+}
+</script>
